--- a/day1/Makefile
+++ b/day1/Makefile
@@ -2,12 +2,14 @@ NAME	= day1
 RM		= rm -rf
 CC		= cc
 CFLAGS	= -Wall -Werror -Wextra
+#CFLAGS	+= -g -fsanitize=address
 SRCS	= 	main.c ft_split.c
+OBJS	= $(SRCS:*.c=*.o)
 
 all:	$(NAME)
 
-$(NAME): 
-	$(CC) $(CFLAGS) $(SRCS) -o $(NAME)
+$(NAME): $(OBJS)
+	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
 
 clean:
 
